# Misgendered-

./: .env.example  .gitignore  README.md  complete_pronoun_eval.py  complete_web_ui.py  pyproject.toml  run_6_models_evaluation.py
reverse-gender-inference/: pyproject.toml  requirements.txt  start_server.py
reverse-gender-inference/config/: seed_config.json
reverse-gender-inference/data/names/: female.txt
reverse-gender-inference/names/: male.txt  unisex.txt
reverse-gender-inference/src/core/: evaluator.py  prompt_builder.py  seed_manager.py  types.py
reverse-gender-inference/src/data/: generator.py
reverse-gender-inference/src/models/: __init__.py  anthropic_model.py  deepseek_model.py  openai_model.py  qwen_model.py
reverse-gender-inference/src/web/: __init__.py  app.py
reverse-gender-inference/src/web/static/: index.html  script.js  style.css
reverse-gender-inference/templates/: templates.csv
web_templates/: index.html
