[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonbinary-pronoun-eval"
version = "1.0.0"
description = "An updated evaluation framework for nonbinary pronoun understanding in large language models"
authors = [
    {name = "Research Team", email = "research@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "bias", "fairness", "llm", "evaluation", "pronouns"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --cov=src"
asyncio_mode = "auto"