[tool.poetry]
name = "reverse-gender-inference"
version = "0.1.0"
description = "Reverse Gender Inference Detection System for LLM Bias Evaluation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
openai = "^1.3.0"
anthropic = "^0.7.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.6"
pandas = "^2.1.0"
numpy = "^1.24.0"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.black]
target-version = ['py310']
line-length = 88